--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,9 @@ Description: What the package does (one paragraph).
 Imports:
     rstan,
     dplyr,
-    rlang
+    rlang,
+    magrittr,
+    purrr
 License: What license it uses
 Encoding: UTF-8
 LazyData: true
