add wrapper for parameter and model blocks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export("%>%")
 export(add_data)
+export(add_model)
+export(add_parameter)
 export(create_index)
 export(create_model_from_data)
 export(create_stan_data)
@@ -15,6 +17,7 @@ importFrom(purrr,as_vector)
 importFrom(purrr,flatten)
 importFrom(purrr,imap)
 importFrom(purrr,map)
+importFrom(purrr,partial)
 importFrom(purrr,set_names)
 importFrom(rlang,enexprs)
 importFrom(rlang,exec)
