add function to run rstan models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(create_model_from_data)
 export(create_stan_data)
 export(create_stan_model)
 export(generate_stan_code)
+export(run_stan)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,select)
@@ -21,3 +22,4 @@ importFrom(purrr,partial)
 importFrom(purrr,set_names)
 importFrom(rlang,enexprs)
 importFrom(rlang,exec)
+importFrom(rstan,stan)
